--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: St-George-and-St-Michael-Volume-III_5752
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Great Britain -- History -- Civil War, 1642-1649 -- Fiction'
+- GITenberg
 title: St. George and St. Michael Volume III
 url: http://www.gutenberg.org/ebooks/5752
